--- a/app/components/mifare-cards/mifare-cards.pug
+++ b/app/components/mifare-cards/mifare-cards.pug
@@ -13,20 +13,20 @@ mixin mifare-cards()
         +default-table-body
           +default-table-row
             +default-table-cell
-              a(href='#') 1234 5678 9012
+              a(href='#' data-target-popup='#mifare-popup').js-show-popup 1234 5678 9012
             +default-table-cell Нет
           +default-table-row
             +default-table-cell
-              a(href='#') 5234 4256 9012
+              a(href='#' data-target-popup='#mifare-popup').js-show-popup 5234 4256 9012
             +default-table-cell
               a(href='#') Петров Василий Анатольевич
           +default-table-row
             +default-table-cell
-              a(href='#') 7346 2134 9012
+              a(href='#' data-target-popup='#mifare-popup').js-show-popup 7346 2134 9012
             +default-table-cell
               a(href='#') Смирнов Алексей Борисович
           +default-table-row
             +default-table-cell
-              a(href='#') 1234 6467 9012
+              a(href='#' data-target-popup='#mifare-popup').js-show-popup 1234 6467 9012
             +default-table-cell
               a(href='#') Алексеев Иван Сергеевич
