--- a/app/components/mifare-popup/mifare-popup.pug
+++ b/app/components/mifare-popup/mifare-popup.pug
@@ -16,11 +16,11 @@ mixin mifare-popup()
           +inner-sidebar.__sidebar
             +inner-sidebar-item._menu
               +vertical-menu
-                +vertical-menu-item
+                +vertical-menu-item('#mifare-popup-info')
                   +vertical-menu-text Информация
-                +vertical-menu-item
+                +vertical-menu-item('#mifare-popup-sessions')
                   +vertical-menu-text Сессии
-                +vertical-menu-item._active
+                +vertical-menu-item('#mifare-popup-transactions')
                   +vertical-menu-text Транзакции
             +inner-sidebar-item._with_border
               a(href='#').mifare-popup__remove-card Отвязать карту
@@ -28,9 +28,9 @@ mixin mifare-popup()
               +icon-button('icon-lock')(href='#')._uppercase._shadow.mifare-popup__unlock-button Разблокировать
 
           +e.content
-            //- Информация
-            //- +mifare-card-info
-            //- Сессии
-            //- +mifare-card-sessions
-            //- Транзакции
-            +mifare-card-transactions
+            // Информация
+            +mifare-card-info#mifare-popup-info
+            // Сессии
+            +mifare-card-sessions#mifare-popup-sessions
+            // Транзакции
+            +mifare-card-transactions#mifare-popup-transactions
