--- a/app/layouts/simple.pug
+++ b/app/layouts/simple.pug
@@ -5,4 +5,8 @@ html(lang='ru')
   include head
   body
     block content
+    script(src='assets/scripts/libs/jquery-ui.min.js')
+    script(src='assets/scripts/libs/moment.min.js')
+    script(src='assets/scripts/libs/jquery.daterangepicker.min.js')
+    script(src='assets/scripts/libs/spectrum.js')
     script(src='assets/scripts/app.min.js')
