--- a/app/components/mifare-popup/mifare-popup.scss
+++ b/app/components/mifare-popup/mifare-popup.scss
@@ -4,6 +4,22 @@
   min-width: 908px;
   min-height: 100%;
 
+  &_blocked {
+
+    .mifare-popup {
+
+      &__alert { display: block; }
+
+      &__sidebar-btn { background-color: #ffebe6; }
+
+      &__action {
+
+        &_block { display: none; }
+        &_unblock { display: block; }
+      }
+    }
+  }
+
   &__container {
     display: flex;
     width: 100%;
@@ -11,6 +27,7 @@
   }
 
   &__alert {
+    display: none;
     box-shadow: 0 1px 0 #d2d3d3;
   }
 
@@ -54,10 +71,10 @@
   &__sidebar-btn {
     margin-top: auto;
     padding: 12px;
-    background-color: #ffebe6;
+    transition: background-color .25s ease-in-out;
   }
 
-  &__unlock-button {
+  &__action-btn {
     box-sizing: border-box;
     justify-content: space-between;
     width: 100%;
@@ -72,5 +89,11 @@
       margin: 0 auto;
       padding-left: 5px;
     }
+  }
+
+  &__action {
+    width: 100%;
+
+    &_unblock { display: none; }
   }
 }
