--- a/app/components/clients-common-info/clients-common-info.pug
+++ b/app/components/clients-common-info/clients-common-info.pug
@@ -14,11 +14,11 @@ mixin clients-common-info()
       +field
         +field-label._align_right.clients-common-info__label Телефон:
         +field-item
-          +input
+          +input(type='tel')
       +field
         +field-label._align_right.clients-common-info__label E-mail:
         +field-item
-          +input
+          +input(type='email')
       +field
         +field-label._align_right.clients-common-info__label Парковочных мест:
         +field-item
@@ -32,11 +32,11 @@ mixin clients-common-info()
       +field
         +field-label._align_right.clients-common-info__label Телефон:
         +field-item
-          +input
+          +input(type='tel')
       +field
         +field-label._align_right.clients-common-info__label E-mail:
         +field-item
-          +input
+          +input(type='email')
 
     +e.save-button
       +button.BUTTON(type='submit')._green._uppercase._align_center Сохранить изменения
