--- a/app/components/login-form/login-form.pug
+++ b/app/components/login-form/login-form.pug
@@ -9,7 +9,7 @@ mixin login-form()
       +field._vertical.__field
         +field-label Телефон:
         +field-item
-          +input
+          +input()(type='tel')
       +field._vertical.__field
         +field-label Пароль:
         +field-item
