--- a/app/components/mifare-card-info/mifare-card-info.pug
+++ b/app/components/mifare-card-info/mifare-card-info.pug
@@ -17,13 +17,13 @@ mixin mifare-card-info()
       +field
         +field-label._align_right.mifare-card-info__label Время въезда
         +field-item.mifare-card-info__field
-          +input(value='2016-11-20')
-          +input(value='12:40').mifare-card-info__small
+          +input(type='date' value='2016-11-20')
+          +input(type='time' value='12:40').mifare-card-info__small
       +field
         +field-label._align_right.mifare-card-info__label Время пересчета
         +field-item.mifare-card-info__field
-          +input(value='2016-11-20')
-          +input(value='12:40').mifare-card-info__small
+          +input(type='date' value='2016-11-20')
+          +input(type='time' value='12:40').mifare-card-info__small
       +field
         +field-label._align_right.mifare-card-info__label Тарифный план
         +field-item.mifare-card-info__field
@@ -39,8 +39,8 @@ mixin mifare-card-info()
       +field
         +field-label._align_right.mifare-card-info__label ТВП
         +field-item.mifare-card-info__field
-          +input(value='2000-01-01')
-          +input(value='00:00').mifare-card-info__small
+          +input(type='date' value='2000-01-01')
+          +input(type='time' value='00:00').mifare-card-info__small
       +field
         +field-label._align_right.mifare-card-info__label ТКВП
         +field-item.mifare-card-info__field
@@ -48,18 +48,18 @@ mixin mifare-card-info()
       +field
         +field-label._align_right.mifare-card-info__label Обнуление ВП
         +field-item.mifare-card-info__field
-          +input(value='2000-01-01')
-          +input(value='00:00').mifare-card-info__small
+          +input(type='date' value='2000-01-01')
+          +input(type='time' value='00:00').mifare-card-info__small
       +field
         +field-label._align_right.mifare-card-info__label Обнуление КВП
         +field-item.mifare-card-info__field
-          +input(value='2000-01-01')
-          +input(value='00:00').mifare-card-info__small
+          +input(type='date' value='2000-01-01')
+          +input(type='time' value='00:00').mifare-card-info__small
       +field
         +field-label._align_right.mifare-card-info__label Обнуление абонемент
         +field-item.mifare-card-info__field
-          +input(value='2000-01-01')
-          +input(value='00:00').mifare-card-info__small
+          +input(type='date' value='2000-01-01')
+          +input(type='time' value='00:00').mifare-card-info__small
       +field
         +field-label._align_right.mifare-card-info__label Тип клиента
         +field-item.mifare-card-info__field
