--- a/app/pages/settings-devices-zone/settings-devices-zone.pug
+++ b/app/pages/settings-devices-zone/settings-devices-zone.pug
@@ -85,8 +85,8 @@ block layout-right
           +field
             +field-label._align_right.settings-devices-zone__label Кол-во машиномест::
             +field-item.settings-devices-zone__field
-              +input
+              +input(type='number')
           +field
             +field-label._align_right.settings-devices-zone__label Кол-во свободных машиномест:
             +field-item.settings-devices-zone__field
-              +input
+              +input(type='number')
