--- a/app/components/search-filter/search-filter.pug
+++ b/app/components/search-filter/search-filter.pug
@@ -43,7 +43,7 @@ mixin search-filter()
           +field
             +field-label Последняя дата изменения:
             +field-item
-              +input._size_small
+              +input(type='date')._size_small
           +field
             +field-label Группа доступа:
             +field-item
