--- a/app/components/clients-common-info/clients-common-info.pug
+++ b/app/components/clients-common-info/clients-common-info.pug
@@ -7,33 +7,33 @@ mixin clients-common-info()
   +b.FORN.clients-common-info&attributes(attributes)
     +e.FIELDSET.fieldset
       +e.LEGEND.heading Данные о компании
-      +field
+      +field.LABEL
         +field-label._align_right.clients-common-info__label Название:
         +field-item
           +input
-      +field
+      +field.LABEL
         +field-label._align_right.clients-common-info__label Телефон:
         +field-item
           +input(type='tel')
-      +field
+      +field.LABEL
         +field-label._align_right.clients-common-info__label E-mail:
         +field-item
           +input(type='email')
-      +field
+      +field.LABEL
         +field-label._align_right.clients-common-info__label Парковочных мест:
         +field-item
           +counter
     +e.FIELDSET.fieldset
       +e.LEGEND.heading Контактное лицо
-      +field
+      +field.LABEL
         +field-label._align_right.clients-common-info__label ФИО:
         +field-item
           +input
-      +field
+      +field.LABEL
         +field-label._align_right.clients-common-info__label Телефон:
         +field-item
           +input(type='tel')
-      +field
+      +field.LABEL
         +field-label._align_right.clients-common-info__label E-mail:
         +field-item
           +input(type='email')
