--- a/app/components/search-filter/search-filter.pug
+++ b/app/components/search-filter/search-filter.pug
@@ -40,7 +40,7 @@ mixin search-filter()
             +field-label Тип клиента:
             +field-item
               +select([{ title: 'Разовый', value: 1 }, { title: 'Разовый 1', value: 2 }])._size_small
-          +field
+          +field.LABEL
             +field-label Последняя дата изменения:
             +field-item
               +input(type='date')._size_small
