--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -28,7 +28,7 @@ block layout-right
   +b.index.page
     +actions-header.js-index-actions-default
       +actions-header-col
-        +button(href="#" data-target-dropdown='#add-client-dropdown')._green.js-show-dropdown Добавить клиента
+        +button(href="#" data-target-dropdown='#add-client-dropdown')._green.index__add-client.js-show-dropdown Добавить клиента
         +add-client-dropdown
       +actions-header-col._flexible
         +search-bar-filter('Введите название партнёра, название или адрес объекта')._white.__search-bar
