--- a/app/pages/settings-devices-device/settings-devices-device.pug
+++ b/app/pages/settings-devices-device/settings-devices-device.pug
@@ -84,7 +84,7 @@ block layout-right
 
         +e.FORM.form(action='#' method='post')
           +fieldset('1. Общие')
-            +field
+            +field.LABEL
               +field-label._align_right.settings-devices-zone__label Название устройства:
               +field-item.settings-devices-zone__field
                 +input
