--- a/app/pages/settings-devices-zone/settings-devices-zone.pug
+++ b/app/pages/settings-devices-zone/settings-devices-zone.pug
@@ -78,15 +78,15 @@ block layout-right
         +setting-actions Сити 129
 
         +e.FORM.form(action='#' method='post')
-          +field
+          +field.LABEL
             +field-label._align_right.settings-devices-zone__label Название:
             +field-item.settings-devices-zone__field
               +input
-          +field
+          +field.LABEL
             +field-label._align_right.settings-devices-zone__label Кол-во машиномест::
             +field-item.settings-devices-zone__field
               +input(type='number')
-          +field
+          +field.LABEL
             +field-label._align_right.settings-devices-zone__label Кол-во свободных машиномест:
             +field-item.settings-devices-zone__field
               +input(type='number')
