--- a/app/blocks/default-table/default-table.scss
+++ b/app/blocks/default-table/default-table.scss
@@ -6,6 +6,8 @@
 
     .default-table__cell {
       font-weight: 500;
+      padding-top: 14px;
+      padding-bottom: 14px;
     }
   }
 
@@ -13,7 +15,7 @@
     color: #1b1c1f;
     font-size: 14px;
     font-weight: 400;
-    padding: 14px 0;
+    padding: 8px 0;
 
     &_width_90 { width: 90px; }
     &_width_100 { width: 100px; }
