--- a/app/blocks/select/select.scss
+++ b/app/blocks/select/select.scss
@@ -11,8 +11,9 @@
   will-change: border-color, box-shadow;
   transition: border-color .25s ease-in-out;
 
-  &:hover, &_active {
+  &:hover, &_active, &:focus {
     border-color: #f9ad1a;
+    outline: none;
 
     .select {
 
@@ -82,8 +83,8 @@
   }
 
   &__caret {
-    width: 13px;
-    height: 6px;
+    width: 14px;
+    height: 10px;
     stroke: #242529;
     fill: none;
     will-change: stroke;
