--- a/app/blocks/colorpicker/colorpicker.scss
+++ b/app/blocks/colorpicker/colorpicker.scss
@@ -1,4 +1,34 @@
 .colorpicker {
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  border: 1px solid #d2d3d3;
+  border-radius: 3px;
+  overflow: hidden;
+
+  .sp-replacer {
+    margin: initial;
+    overflow: initial;
+    border: initial;
+    background: transparent;
+    color: initial;
+    vertical-align: initial;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+  }
+
+  .sp-dd {
+    display: none;
+  }
+
+  .sp-preview {
+    width: 100%;
+    height: 100%;
+    margin: initial;
+    float: initial;
+    border: initial;
+  }
 
   &_circle {
 
@@ -8,11 +38,6 @@
   }
 
   &__input {
-    width: 32px;
-    height: 32px;
-    border-radius: 3px;
-    border: 1px solid #d2d3d3;
-    margin: 0;
-    padding: 0;
+    display: none;
   }
 }
